# AutoLog

./: .gitignore  .pre-commit-config.yaml  README.md  add_record.py  constants.py  data_reader.py  data_writer.py  database_utilities.py  display.py  main.py  pyproject.toml  query.py
VehicleVitals/: add_record.py  database_utilities.py  display.py  edit.py  main.py
VehicleVitals/migration/: v0.1_to_v0.2.py
VehicleVitals/sql/: update_db_from_v0.1_to_v0.2.sql
sql/: init_database.sql
