[project]
name = "VehicleVitals"
version = "0.2.0"
description = "A tool for monitoring the health and fuel consumption of your vehicles."
authors = ["Brandon Leon <brandonleon@pm.me>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
]
